<resources>
    <string name="app_name">WeatherNewsApplication</string>

    <string name="main_weather_title">天気・ニュースアプリ</string>
    <string name="main_weather_area_title">地域</string>
    <string name="main_weather_today_title">今日</string>
    <string name="main_weather_tomorrow_title">明日</string>

    <string name="main_weather_area">函館市</string>
    <string name="main_weather_today_temperature">10.0°\n11.0°/5.0°</string>
    <string name="main_weather_tomorrow_temperature">12.0°\n15.0°/10.0°</string>
    <string name="reload_button_description">リロード</string>
    <string name="settings_button_description">設定</string>

    <string name="weather_area_setting_title">地域の設定</string>
    <string name="common_decide_button">決定</string>
    <string name="weather_area_hint">表示したい天気の地域を入力してください</string>

    <string name="settings_title">設定</string>
    <string name="app_version_title">アプリバージョン</string>
    <string name="terms_of_service_title">利用規約</string>
    <string name="terms_of_service_summary">利用規約を表示します</string>
    <string name="privacy_policy_title">プライバシーポリシー</string>
    <string name="privacy_policy_summary">プライバシーポリシーを表示します</string>
    <string name="license_title">ライセンス</string>
    <string name="license_summary">ライセンスを表示します</string>
    <string name="key_app_version">key_app_version</string>
    <string name="key_terms_of_service">key_terms_of_service</string>
    <string name="key_privacy_policy">key_privacy_policy</string>
    <string name="key_license">key_license</string>

</resources>