<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.woodny.weathernewsapplication.viewmodel.MainFragmentViewModel">
        </variable>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.MainFragment">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/main_weather_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
　
        <ImageButton
            android:id="@+id/reloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/reload_button_description"
            android:onClick="@{viewmodel::onClickReloadButton}"
            android:src="@drawable/baseline_refresh_36"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/settings_button_description"
            android:src="@drawable/baseline_settings_36"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:onClick="@{viewmodel::onClickSettingsButton}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/areaTitle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/main_weather_area_title"
            app:layout_constraintEnd_toStartOf="@+id/todayTitle"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/todayTitle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_weather_today_title"
            app:layout_constraintEnd_toStartOf="@+id/tomorrowTitle"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/areaTitle"
            app:layout_constraintTop_toTopOf="@+id/areaTitle" />

        <TextView
            android:id="@+id/tomorrowTitle"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/main_weather_tomorrow_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/todayTitle"
            app:layout_constraintTop_toTopOf="@+id/areaTitle" />

        <Button
            android:id="@+id/areaButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_weather_area"
            android:onClick="@{viewmodel::onClickAreaText}"
            app:layout_constraintEnd_toEndOf="@+id/areaTitle"
            app:layout_constraintStart_toStartOf="@+id/areaTitle"
            app:layout_constraintTop_toBottomOf="@+id/areaTitle" />

        <ImageView
            android:id="@+id/weatherTodayIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/areaTitle"
            app:layout_constraintTop_toBottomOf="@+id/todayTitle" />

        <TextView
            android:id="@+id/weatherTodayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/weatherTodayIcon"
            app:layout_constraintStart_toEndOf="@+id/weatherTodayIcon"
            app:layout_constraintTop_toTopOf="@+id/weatherTodayIcon" />

        <ImageView
            android:id="@+id/weatherTomorrowIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/todayTitle"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowTitle" />

        <TextView
            android:id="@+id/weatherTomorrowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/weatherTomorrowIcon"
            app:layout_constraintStart_toEndOf="@+id/weatherTomorrowIcon"
            app:layout_constraintTop_toTopOf="@+id/weatherTomorrowIcon" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/verticalRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/areaButton" />

<!--        <Button-->
<!--            android:id="@+id/weatherTomorrowButton"-->
<!--            style="@style/Widget.Material3.Button.TextButton"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:paddingStart="24dp"-->
<!--            android:paddingEnd="24dp"-->
<!--            android:text="@string/main_weather_tomorrow_temperature"-->
<!--            app:icon="@drawable/baseline_cloud_48"-->
<!--            app:iconGravity="start"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/weatherTodayButton"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/tomorrowTitle" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>